--- a/checkout.html
+++ b/checkout.html
@@ -26,8 +26,8 @@
 
       <div class="actions">
         <a href="carrinho.html"><button class="icon-btn" aria-label="Carrinho">🛒 Carrinho</button></a>
-        <a href="#"><button class="icon-btn" aria-label="Registrar">Registrar</button></a>
-        <a href="#"><button class="icon-btn" aria-label="Login">Entrar</button></a>
+        <a href="registro_cliente.html"><button class="icon-btn" aria-label="Registrar">Registrar</button></a>
+        <a href="login.html"><button class="icon-btn" aria-label="Login">Entrar</button></a>
         <a href="#"><button class="icon-btn" aria-label="Perfil">👤</button></a>
       </div>
     </div>
