--- a/carrinho.html
+++ b/carrinho.html
@@ -25,10 +25,10 @@
 
       <div class="actions">
         <a href="carrinho.html"><button class="icon-btn" aria-label="Carrinho">🛒 Carrinho</button></a>
-        <a href="#"><button class="icon-btn" aria-label="Registrar">Registrar</button></a>
-        <a href="#"><button class="icon-btn" aria-label="Login">Entrar</button></a>
+        <a href="registro_cliente.html"><button class="icon-btn" aria-label="Registrar">Registrar</button></a>
+        <a href="login.html"><button class="icon-btn" aria-label="Login">Entrar</button></a>
         <a href="#"><button class="icon-btn" aria-label="Perfil">👤</button></a>
-      </div>
+    </div>
     </div>
 
    <div class="container" style="padding-bottom:10px">
