--- a/registro_cliente.html
+++ b/registro_cliente.html
@@ -49,7 +49,8 @@
 <main class="container" style="max-width: 700px; margin-top: 48px;">
   <div class="hero-card">
     <h1 style="text-align: center; margin-bottom: 24px;">Crie sua Conta</h1>
-    <form>
+    <form id="register-form">
+      <div id="register-error" role="alert" style="display:none; margin-bottom:12px; color:#ff6b6b; font-weight:600;"></div>
       <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 16px;">
           <div>
             <label for="nome" style="display: block; margin-bottom: 6px;">Nome Completo</label>
@@ -104,5 +105,6 @@
     </div>
 </footer>
 
+<script src="js/register.js"></script>
 </body>
 </html>
