--- a/registrar_produto.html
+++ b/registrar_produto.html
@@ -120,14 +120,14 @@
 
   <footer style="margin-top:18px">
   <div class="container">
-    <div class="footer-content" style="display:flex; justify-content:space-between; align-items:center;">
+    <div class="footer-content">
       <div class="footer-left">
         <div style="font-weight:800">CiberTech</div>
         <div style="color:var(--muted)">© 2025 • Todos os direitos reservados</div>
       </div>
-      <div class="footer-right" style="display:flex; align-items:center; color:var(--muted); width:100%;">
-        <div>Pagamento seguro • Parcelamos em até 12x</div>
-        <a href="registrar_produto.html" style="margin-left:auto; color:var(--accent); text-decoration:none; font-weight:600;">
+      <div class="footer-right" style="color:var(--muted)">
+        Pagamento seguro • Parcelamos em até 12x
+        <a href="registrar_produto.html" style="margin-left:12px; color:var(--primary); text-decoration:none; font-weight:600;">
           Registrar produto
         </a>
       </div>
@@ -137,3 +137,4 @@
 
 </body>
 </html>
+
