--- a/registro_cliente.html
+++ b/registro_cliente.html
@@ -94,15 +94,20 @@
 </main>
 
 <footer style="margin-top:18px">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-left">
-          <div style="font-weight:800">CiberTech</div>
-          <div style="color:var(--muted)">© 2025 • Todos os direitos reservados</div>
-        </div>
-        <div class="footer-right" style="color:var(--muted)">Pagamento seguro • Parcelamos em até 12x</div>
+  <div class="container">
+    <div class="footer-content">
+      <div class="footer-left">
+        <div style="font-weight:800">CiberTech</div>
+        <div style="color:var(--muted)">© 2025 • Todos os direitos reservados</div>
+      </div>
+      <div class="footer-right" style="color:var(--muted)">
+        Pagamento seguro • Parcelamos em até 12x
+        <a href="registrar_produto.html" style="margin-left:12px; color:var(--primary); text-decoration:none; font-weight:600;">
+          Registrar produto
+        </a>
       </div>
     </div>
+  </div>
 </footer>
 
 <script src="js/register.js"></script>
