--- a/carrinho.html
+++ b/carrinho.html
@@ -113,7 +113,7 @@
 </footer>
 
   <script src="js/header.js"></script>
-  <script src="js/cart.js"></script>
+  <script src="js/cart.js?v=2025102401"></script>
 
 </body>
 </html>
