--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
 <body>
 
 <header>
+    <!-- ... (cabeçalho idêntico) ... -->
     <div class="container topbar">
       <div class="brand">
         <div class="logo">CT</div>
@@ -18,33 +19,24 @@
           <div style="font-size:12px;color:var(--muted)">Hardware • Periféricos • Promoções</div>
         </div>
       </div>
-
-      <div class="search" role="search" aria-label="Busca de produtos">
-        <input type="search" placeholder="Procure por placa, fonte, gabinete, monitor..." aria-label="buscar produto" />
-        <button aria-label="Pesquisar">Buscar</button>
+      <div class="search" role="search">
+        <input type="search" id="main-search" placeholder="Procure por produtos..." aria-label="buscar produto" />
+        <button id="search-btn" aria-label="Pesquisar">Buscar</button>
       </div>
-
       <div class="actions">
         <a href="carrinho.html"><button class="icon-btn" aria-label="Carrinho">🛒 Carrinho</button></a>
         <a href="registro_cliente.html"><button class="icon-btn" aria-label="Registrar">Registrar</button></a>
         <a href="login.html"><button class="icon-btn" aria-label="Login">Entrar</button></a>
-        <a href="#"><button class="icon-btn" aria-label="Perfil">👤</button></a>
       </div>
     </div>
-
    <div class="container" style="padding-bottom:10px">
-      <nav style="display:flex;gap:12px;align-items:center">
-        <a href="#">Placas-mãe</a>
-        <a href="#">Processadores</a>
-        <a href="#">Placas de vídeo</a>
-        <a href="#">Memória RAM</a>
-        <a href="#">SSD / HD</a>
-        <a href="#">Fontes</a>
-        <a href="#">Monitores</a>
-        <a href="#">Periféricos</a>
+      <nav style="display:flex;gap:12px;align-items:center" id="category-nav">
+        <a href="#" data-category="7">Placas-mãe</a>
+        <a href="#" data-category="6">Processadores</a>
+        <!-- ... outros links ... -->
       </nav>
     </div>
-  </header>
+</header>
 
 <main class="container" style="max-width: 500px; margin-top: 48px;">
   <div class="hero-card">
@@ -61,7 +53,10 @@
       </div>
       <div style="display:flex; justify-content:space-between; align-items: center; margin-bottom: 24px; font-size: 14px;">
         <label><input type="checkbox" name="remember"> Lembrar-me</label>
-        <a href="#" style="color: var(--brand);">Esqueceu a senha?</a>
+        
+        <!-- ** LINK CORRIGIDO ** -->
+        <a href="esqueci-senha.html" style="color: var(--brand);">Esqueceu a senha?</a>
+      
       </div>
       <button type="submit" class="cta" style="width:100%;">Entrar</button>
        <div style="text-align: center; margin-top: 16px; font-size: 14px;">
@@ -72,22 +67,24 @@
 </main>
 
 <footer style="margin-top:18px">
-  <div class="container">
-    <div class="footer-content">
-      <div class="footer-left">
-        <div style="font-weight:800">CiberTech</div>
-        <div style="color:var(--muted)">© 2025 • Todos os direitos reservados</div>
-      </div>
-      <div class="footer-right" style="color:var(--muted)">
-        Pagamento seguro • Parcelamos em até 12x
-        <a href="registrar_produto.html" style="margin-left:12px; color:var(--primary); text-decoration:none; font-weight:600;">
-          Registrar produto
-        </a>
+    <!-- ... (rodapé idêntico) ... -->
+    <div class="container">
+      <div class="footer-content">
+        <div class="footer-left">
+          <div style="font-weight:800">CiberTech</div>
+          <div style="color:var(--muted)">© 2025 • Todos os direitos reservados</div>
+        </div>
+        <div class="footer-right" style="color:var(--muted)">
+          Pagamento seguro • Parcelamos em até 12x
+          <a href="admin-produtos.html" style="margin-left:12px; color:var(--primary); text-decoration:none; font-weight:600;">
+            Admin
+          </a>
+        </div>
       </div>
     </div>
-  </div>
 </footer>
 
+<script src="js/header.js"></script>
 <script src="js/auth.js"></script>
 </body>
 </html>
